--- a/02_assignments/assignment_2.ipynb
+++ b/02_assignments/assignment_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "ffd43063",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,9 @@
     "\n",
     "# Import specific objects\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from ISLP import load_data"
+    "from ISLP import load_data\n",
+    "from ISLP import confusion_table\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
@@ -51,15 +53,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "6449268e-0e33-4976-83cf-5ada4b29597f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method NDFrame.describe of       MOSTYPE  MAANTHUI  MGEMOMV  MGEMLEEF  MOSHOOFD  MGODRK  MGODPR  MGODOV  \\\n",
+      "0          33         1        3         2         8       0       5       1   \n",
+      "1          37         1        2         2         8       1       4       1   \n",
+      "2          37         1        2         2         8       0       4       2   \n",
+      "3           9         1        3         3         3       2       3       2   \n",
+      "4          40         1        4         2        10       1       4       1   \n",
+      "...       ...       ...      ...       ...       ...     ...     ...     ...   \n",
+      "5817       36         1        1         2         8       0       6       1   \n",
+      "5818       35         1        4         4         8       1       4       1   \n",
+      "5819       33         1        3         4         8       0       6       0   \n",
+      "5820       34         1        3         2         8       0       7       0   \n",
+      "5821       33         1        3         3         8       0       6       1   \n",
+      "\n",
+      "      MGODGE  MRELGE  ...  APERSONG  AGEZONG  AWAOREG  ABRAND  AZEILPL  \\\n",
+      "0          3       7  ...         0        0        0       1        0   \n",
+      "1          4       6  ...         0        0        0       1        0   \n",
+      "2          4       3  ...         0        0        0       1        0   \n",
+      "3          4       5  ...         0        0        0       1        0   \n",
+      "4          4       7  ...         0        0        0       1        0   \n",
+      "...      ...     ...  ...       ...      ...      ...     ...      ...   \n",
+      "5817       2       1  ...         0        0        0       1        0   \n",
+      "5818       4       6  ...         0        0        0       1        0   \n",
+      "5819       3       5  ...         0        0        0       1        0   \n",
+      "5820       2       7  ...         0        0        0       0        0   \n",
+      "5821       2       7  ...         0        0        0       0        0   \n",
+      "\n",
+      "      APLEZIER  AFIETS  AINBOED  ABYSTAND  Purchase  \n",
+      "0            0       0        0         0        No  \n",
+      "1            0       0        0         0        No  \n",
+      "2            0       0        0         0        No  \n",
+      "3            0       0        0         0        No  \n",
+      "4            0       0        0         0        No  \n",
+      "...        ...     ...      ...       ...       ...  \n",
+      "5817         0       0        0         0        No  \n",
+      "5818         0       0        0         0        No  \n",
+      "5819         0       0        0         0       Yes  \n",
+      "5820         0       0        0         0        No  \n",
+      "5821         0       0        0         0        No  \n",
+      "\n",
+      "[5822 rows x 86 columns]>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Purchase\n",
+       "No     5474\n",
+       "Yes     348\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the \"Caravan\" dataset using the \"load_data\" function from the ISLP package\n",
     "Caravan = load_data('Caravan')\n",
     "\n",
-    "# Add your code here"
+    "# Add your code here\n",
+    "\n",
+    "print(Caravan.describe)\n",
+    "Caravan.Purchase.value_counts()"
    ]
   },
   {
@@ -69,19 +134,45 @@
    "source": [
     "Before fitting any model, it is essential to understand our data. Answer the following questions about the `Caravan` dataset (Hint: use `print` and `describe`):  \n",
     "_(i)_ How many observations (rows) does the dataset contain?    \n",
-    "_(ii)_ How many variables (columns) does the dataset contain?    \n",
-    "_(iii)_ What 'variable' type is the response variable `Purchase` (e.g., 'character', 'factor', 'numeric', etc)? What are the 'levels' of the variable?    \n",
-    "_(iv)_ How many predictor variables do we have (Hint: all variables other than `Purchase`)?  "
+    "\n",
+    "    R = 5822 rows\n",
+    "\n",
+    "_(ii)_ How many variables (columns) does the dataset contain?   \n",
+    "    \n",
+    "    R = 86 columns\n",
+    "\n",
+    "_(iii)_ What 'variable' type is the response variable `Purchase` (e.g., 'character', 'factor', 'numeric', etc)? What are the 'levels' of the variable?   \n",
+    "\n",
+    "    R = dtype: int64, levels are 'Yes' and 'No'\n",
+    "\n",
+    "_(iv)_ How many predictor variables do we have (Hint: all variables other than `Purchase`)?  \n",
+    "\n",
+    "    R = 85"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "5a3a8ec5-98e4-431d-967b-ae1482127de4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Purchase\n",
+       "No     5474\n",
+       "Yes     348\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Add your code here"
+    "# Add your code here\n",
+    "Caravan.Purchase.value_counts()"
    ]
   },
   {
@@ -94,10 +185,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "4c2901b1-82ce-4729-88d9-7d9985336221",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    MOSTYPE  MAANTHUI   MGEMOMV  MGEMLEEF  MOSHOOFD    MGODRK    MGODPR  \\\n",
+      "0  0.680906  -0.27258  0.406697 -1.216964  0.779405 -0.694311  0.217444   \n",
+      "1  0.992297  -0.27258 -0.859500 -1.216964  0.779405  0.302552 -0.365410   \n",
+      "2  0.992297  -0.27258 -0.859500 -1.216964  0.779405 -0.694311 -0.365410   \n",
+      "3 -1.187437  -0.27258  0.406697  0.010755 -0.970980  1.299414 -0.948264   \n",
+      "4  1.225840  -0.27258  1.672893 -1.216964  1.479559  0.302552 -0.365410   \n",
+      "\n",
+      "     MGODOV    MGODGE    MRELGE  ...   ALEVEN  APERSONG   AGEZONG  AWAOREG  \\\n",
+      "0 -0.068711 -0.161816  0.427670  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "1 -0.068711  0.464159 -0.096077  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "2  0.914172  0.464159 -1.667319  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "3  0.914172  0.464159 -0.619824  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "4 -0.068711  0.464159  0.427670  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "\n",
+      "     ABRAND   AZEILPL  APLEZIER   AFIETS   AINBOED  ABYSTAND  \n",
+      "0  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "1  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "2  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "3  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "4  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "\n",
+      "[5 rows x 85 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Select predictors (excluding the 86th column)\n",
     "predictors = Caravan.iloc[:, :-1]\n",
@@ -116,7 +236,12 @@
    "metadata": {},
    "source": [
     "_(v)_ Why is it important to standardize the predictor variables?  \n",
-    "_(vi)_ Why did we elect not to standard our response variable `Purchase`?  \n"
+    "\n",
+    "    Because data might in different scales and in order to make variables comparable on the same scale they need to be standarized meaning they are given a mean zero and Standard Deviation of 1. \n",
+    "\n",
+    "_(vi)_ Why did we elect not to standard our response variable `Purchase`?  \n",
+    "\n",
+    "    it might complicate interpretation\n"
    ]
   },
   {
@@ -135,17 +260,20 @@
    "metadata": {},
    "source": [
     "\n",
-    "_(vii)_ A second essential step is to set a random seed. Do so below (Hint: use the `random.seed` function). Why is setting a seed important? Is the particular seed value important? Why or why not?"
+    "_(vii)_ A second essential step is to set a random seed. Do so below (Hint: use the `random.seed` function). Why is setting a seed important? Is the particular seed value important? Why or why not?\n",
+    "\n",
+    "R = it is important when making samples sets so that results can be replicated by adding random values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "230fd782-cfe1-45e6-ad00-a67e6b04d024",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code here"
+    "# Add your code here\n",
+    "np.random.seed()"
    ]
   },
   {
@@ -158,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "cbe9f219-571b-476b-9f5b-b47431c803b1",
    "metadata": {},
    "outputs": [],
@@ -189,12 +317,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "e6a117de-279b-4320-b64e-4051ba2887d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Truth</th>\n",
+       "      <th>No</th>\n",
+       "      <th>Yes</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Predicted</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>No</th>\n",
+       "      <td>1219</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>77</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Truth        No  Yes\n",
+       "Predicted           \n",
+       "No         1219   63\n",
+       "Yes          77    8"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Add your code here"
+    "# Add your code here\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=1) #\n",
+    "training_X , testing_X = [np.asarray(X) for X in [training_X, testing_X]]\n",
+    "\n",
+    "P = Caravan.Purchase\n",
+    "L_train, L_test = P.loc[split], P.loc[~split]\n",
+    "\n",
+    "knn.fit(training_X, training_Y)\n",
+    "knn_pred = knn.predict(testing_X)\n",
+    "confusion_table(knn_pred, L_test)"
    ]
   },
   {
@@ -209,22 +404,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "74dbe6c4-1a4d-4f06-9e2e-597da03952ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8975859546452085\n",
+      "accuracy:  0.8975859546452085\n"
+     ]
+    }
+   ],
    "source": [
-    "# prediction accuracy rate"
+    "# prediction accuracy rate\n",
+    "accuracy = (1219+8)/(1219+77+63+8)\n",
+    "print(accuracy)\n",
+    "\n",
+    "np.mean(knn_pred == L_test)\n",
+    "print('accuracy: ', accuracy)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "9384d3f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10241404535479148\n",
+      "error_rate:  0.10241404535479148\n"
+     ]
+    }
+   ],
    "source": [
-    "# prediction error rate"
+    "# prediction error rate\n",
+    "error_rate = 1-(1219+8)/(1219+77+63+8)\n",
+    "print(error_rate)\n",
+    "print('error_rate: ', (1-accuracy))\n"
    ]
   },
   {
@@ -237,10 +458,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "c89ade30-3465-4104-b300-61d78b319d3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.977327378907591\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the percentage of customers who purchase insurance\n",
     "percentage_purchase = (Caravan['Purchase'].eq('Yes').sum() / len(Caravan['Purchase'])) * 100\n",
@@ -253,17 +482,132 @@
    "id": "a7e19b5e-ad65-47f8-a3ef-e0f68a75048e",
    "metadata": {},
    "source": [
-    "_(xiii)_ Fit a second KNN model, with $K=3$. Does this model perform better (i.e., have higher accuracy, compared to a random guess)?"
+    "_(xiii)_ Fit a second KNN model, with $K=3$. Does this model perform better (i.e., have higher accuracy, compared to a random guess)?\n",
+    "\n",
+    "    The accuracy is higher; closer to ~0.97"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fedbe4f2",
+   "execution_count": 101,
+   "id": "c01bc51c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "\n",
+    "np.random.seed()\n",
+    "# Create a random vector of True and False values\n",
+    "split3 = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])\n",
+    "\n",
+    "# Define the training set for X (predictors)\n",
+    "training_X3 = predictors_standardized[split3]\n",
+    "\n",
+    "# Define the training set for Y (response)\n",
+    "training_Y3 = Caravan.loc[split3, 'Purchase']\n",
+    "\n",
+    "# Define the testing set for X (predictors)\n",
+    "testing_X3 = predictors_standardized[~split3]\n",
+    "\n",
+    "# Define the testing set for Y (response)\n",
+    "testing_Y3 = Caravan.loc[~split3, 'Purchase']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "fedbe4f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Truth</th>\n",
+       "      <th>No</th>\n",
+       "      <th>Yes</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Predicted</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>No</th>\n",
+       "      <td>1321</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>17</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Truth        No  Yes\n",
+       "Predicted           \n",
+       "No         1321   91\n",
+       "Yes          17    7"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "knn3 = KNeighborsClassifier(n_neighbors=3) #\n",
+    "training_X3 , testing_X3 = [np.asarray(X) for X in [training_X3, testing_X3]]\n",
+    "\n",
+    "P = Caravan.Purchase\n",
+    "L_train3, L_test3 = P.loc[split3], P.loc[~split3]\n",
+    "\n",
+    "knn3.fit(training_X3, training_Y3)\n",
+    "knn3_pred = knn3.predict(testing_X3)\n",
+    "confusion_table(knn3_pred, L_test3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "6ad51a55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:  0.924791086350975     eror_rate:  0.07520891364902504\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "accuracy3 = np.mean(knn3_pred == L_test3)\n",
+    "error_rate3 = 1 - accuracy3\n",
+    "print('accuracy: ', accuracy3, '   ', 'eror_rate: ', error_rate3)\n"
    ]
   },
   {
@@ -321,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
