--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -818,7 +818,7 @@
    "id": "ec9f37aa",
    "metadata": {},
    "source": [
-    "_Ans:(ii)_ In the context of the `Boston` dataset, state the null and alternative hypotheses.\n",
+    "_Ans:(ii)_ In the context of performing multiple linear regression with the Boston dataset, the null and alternative hypotheses pertain to whether there is a statistically significant relationship between the response variable (medv - median home values) and the set of predictor variables (all other variables in the dataset, excluding the name variable)\n",
     "\n",
     "_H0:_ B-crim\t= B-zn = B-indus = B-chas =\tB-nox =\tB-rm =\tB-age =\tB-dis = B-rad = B-tax =\tB-ptratio =\tB-lstat\t= B-medv =0\n",
     " \n",
