assignment_2 - first pass

--- a/02_assignments/assignment_2.ipynb
+++ b/02_assignments/assignment_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "ffd43063",
    "metadata": {},
    "outputs": [],
@@ -36,6 +36,9 @@
     "\n",
     "# Import specific objects\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from ISLP import confusion_table\n",
     "from ISLP import load_data"
    ]
   },
@@ -51,15 +54,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6449268e-0e33-4976-83cf-5ada4b29597f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      MOSTYPE  MAANTHUI  MGEMOMV  MGEMLEEF  MOSHOOFD  MGODRK  MGODPR  MGODOV  \\\n",
+      "0          33         1        3         2         8       0       5       1   \n",
+      "1          37         1        2         2         8       1       4       1   \n",
+      "2          37         1        2         2         8       0       4       2   \n",
+      "3           9         1        3         3         3       2       3       2   \n",
+      "4          40         1        4         2        10       1       4       1   \n",
+      "...       ...       ...      ...       ...       ...     ...     ...     ...   \n",
+      "5817       36         1        1         2         8       0       6       1   \n",
+      "5818       35         1        4         4         8       1       4       1   \n",
+      "5819       33         1        3         4         8       0       6       0   \n",
+      "5820       34         1        3         2         8       0       7       0   \n",
+      "5821       33         1        3         3         8       0       6       1   \n",
+      "\n",
+      "      MGODGE  MRELGE  ...  APERSONG  AGEZONG  AWAOREG  ABRAND  AZEILPL  \\\n",
+      "0          3       7  ...         0        0        0       1        0   \n",
+      "1          4       6  ...         0        0        0       1        0   \n",
+      "2          4       3  ...         0        0        0       1        0   \n",
+      "3          4       5  ...         0        0        0       1        0   \n",
+      "4          4       7  ...         0        0        0       1        0   \n",
+      "...      ...     ...  ...       ...      ...      ...     ...      ...   \n",
+      "5817       2       1  ...         0        0        0       1        0   \n",
+      "5818       4       6  ...         0        0        0       1        0   \n",
+      "5819       3       5  ...         0        0        0       1        0   \n",
+      "5820       2       7  ...         0        0        0       0        0   \n",
+      "5821       2       7  ...         0        0        0       0        0   \n",
+      "\n",
+      "      APLEZIER  AFIETS  AINBOED  ABYSTAND  Purchase  \n",
+      "0            0       0        0         0        No  \n",
+      "1            0       0        0         0        No  \n",
+      "2            0       0        0         0        No  \n",
+      "3            0       0        0         0        No  \n",
+      "4            0       0        0         0        No  \n",
+      "...        ...     ...      ...       ...       ...  \n",
+      "5817         0       0        0         0        No  \n",
+      "5818         0       0        0         0        No  \n",
+      "5819         0       0        0         0       Yes  \n",
+      "5820         0       0        0         0        No  \n",
+      "5821         0       0        0         0        No  \n",
+      "\n",
+      "[5822 rows x 86 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the \"Caravan\" dataset using the \"load_data\" function from the ISLP package\n",
     "Caravan = load_data('Caravan')\n",
-    "\n",
-    "# Add your code here"
+    "#val = Caravan['Purchase'].describe()\n",
+    "#val['unique']\n",
+    "print(Caravan)\n",
+    "# desc = Caravan.describe()\n",
+    "# # print(desc.columns)\n",
+    "# # Add your code here\n",
+    "# Caravan.columns.difference(desc.columns)\n"
    ]
   },
   {
@@ -76,12 +131,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5a3a8ec5-98e4-431d-967b-ae1482127de4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "observations (rows) in caravan data model: 5822\n",
+      "variables (columns) in caravan data model: 86\n",
+      "variable type: Factor (categorical), levels: 2\n",
+      "predictor variables (columns not named 'Purchase') in caravan data model: 85\n"
+     ]
+    }
+   ],
    "source": [
-    "# Add your code here"
+    "# (i) How many observations (rows) does the dataset contain? (todo: is this right though?)\n",
+    "print(f\"observations (rows) in caravan data model: {Caravan.shape[0]}\")\n",
+    "# (ii) How many variables (columns) does the dataset contain?  \n",
+    "print(f\"variables (columns) in caravan data model: {Caravan.shape[1]}\")\n",
+    "# (iii) What 'variable' type is the response variable `Purchase` (e.g., 'character', 'factor', 'numeric', etc)? What are the 'levels' of the variable?\n",
+    "print(f\"variable type: Factor (categorical), levels: {Caravan['Purchase'].describe()['unique']}\")\n",
+    "# (iv) How many predictor variables do we have (Hint: all variables other than `Purchase`)?  \n",
+    "print(f\"predictor variables (columns not named 'Purchase') in caravan data model: {len(Caravan.describe().columns)}\")"
    ]
   },
   {
@@ -94,10 +167,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "4c2901b1-82ce-4729-88d9-7d9985336221",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    MOSTYPE  MAANTHUI   MGEMOMV  MGEMLEEF  MOSHOOFD    MGODRK    MGODPR  \\\n",
+      "0  0.680906  -0.27258  0.406697 -1.216964  0.779405 -0.694311  0.217444   \n",
+      "\n",
+      "     MGODOV    MGODGE   MRELGE  ...   ALEVEN  APERSONG   AGEZONG  AWAOREG  \\\n",
+      "0 -0.068711 -0.161816  0.42767  ... -0.20291 -0.073165 -0.081055 -0.05992   \n",
+      "\n",
+      "     ABRAND   AZEILPL  APLEZIER   AFIETS   AINBOED  ABYSTAND  \n",
+      "0  0.764971 -0.022706  -0.07365 -0.15062 -0.087348 -0.118816  \n",
+      "\n",
+      "[1 rows x 85 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Select predictors (excluding the 86th column)\n",
     "predictors = Caravan.iloc[:, :-1]\n",
@@ -107,7 +197,7 @@
     "predictors_standardized = pd.DataFrame(scaler.fit_transform(predictors), columns=predictors.columns)\n",
     "\n",
     "# Display the head of the standardized predictors\n",
-    "print(predictors_standardized.head())"
+    "print(predictors_standardized.head(1)) # make this one to not take up as much room on my screen."
    ]
   },
   {
@@ -120,13 +210,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "40a8c0f5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answer here"
+    "### (v) Why is it important to standarize the predictor variables?\n",
+    "Certain variables are significantly larger than others. Variables on a large scale will have a much larger affect on the distance between the observations. These larger values can have an outsized influence on the KNN classification results. Standardizing them via scaling allows all variables to be on a comparable scale. So a a larger variable will still have an effect, but not an outsized one.\n",
+    "\n",
+    "### (vi) Why did we elect not to standard our response variable `Purchase`?\n",
+    "That's the value we're trying to predict. We shouldn't be using Purchase at all in our data, hence we drop it."
    ]
   },
   {
@@ -140,12 +232,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "230fd782-cfe1-45e6-ad00-a67e6b04d024",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "While KNN's algorithm is running, there is the potential for multiple neighbors to be tied during a measurement. If this occurs, Scikit will randomly break the tie so it can continue. By setting\n",
+      "the seed, we force scikit to use a consistent random number, making our results reproducible.\n",
+      "      \n",
+      "The seed value isn't particularly important. It only needs to stay constant across all runs for a good comparison.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Add your code here"
+    "# Add your code here\n",
+    "# This affects the np.random method below. Using `train_test_split` requires the seed to be per method.\n",
+    "np.random.seed(42)\n",
+    "print(\"\"\"\n",
+    "While KNN's algorithm is running, there is the potential for multiple neighbors to be tied during a measurement. If this occurs, Scikit will randomly break the tie so it can continue. By setting\n",
+    "the seed, we force scikit to use a consistent random number, making our results reproducible.\n",
+    "      \n",
+    "The seed value isn't particularly important. It only needs to stay constant across all runs for a good comparison.\n",
+    "\"\"\")"
    ]
   },
   {
@@ -158,25 +271,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "cbe9f219-571b-476b-9f5b-b47431c803b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True False  True ...  True  True False]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a random vector of True and False values\n",
-    "split = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])\n",
-    "\n",
+    "split = np.random.choice(\n",
+    "    [True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25]\n",
+    ")\n",
     "# Define the training set for X (predictors)\n",
     "training_X = predictors_standardized[split]\n",
     "\n",
     "# Define the training set for Y (response)\n",
-    "training_Y = Caravan.loc[split, 'Purchase']\n",
+    "training_Y = Caravan.loc[split, \"Purchase\"]\n",
     "\n",
     "# Define the testing set for X (predictors)\n",
     "testing_X = predictors_standardized[~split]\n",
     "\n",
     "# Define the testing set for Y (response)\n",
-    "testing_Y = Caravan.loc[~split, 'Purchase']\n"
+    "testing_Y = Caravan.loc[~split, \"Purchase\"]\n",
+    "\n",
+    "#Extended to include the random state seed, the NP.  Avoids needing to check for outright overlapping values\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(\n",
+    "    predictors_standardized, Caravan.Purchase, test_size=0.25, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -189,12 +316,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "e6a117de-279b-4320-b64e-4051ba2887d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8846153846153846"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Add your code here"
+    "# Add your code here\n",
+    "knn = KNeighborsClassifier(n_neighbors=1)\n",
+    "# knn.fit(training_X, training_Y)\n",
+    "# knn.score(testing_X, testing_Y)\n",
+    "knn.fit(X_train, Y_train)\n",
+    "knn.score(X_test, Y_test)\n",
+    "# confusion_table(knn_pred, testing_Y)"
    ]
   },
   {
@@ -209,22 +353,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "74dbe6c4-1a4d-4f06-9e2e-597da03952ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prediction accuracy rate: 88.46153846153845 %\n"
+     ]
+    }
+   ],
    "source": [
-    "# prediction accuracy rate"
+    "# prediction accuracy rate\n",
+    "print(f\"prediction accuracy rate: {knn.score(X_test, Y_test)*100} %\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "9384d3f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prediction error rate: 11.538461538461538 %\n"
+     ]
+    }
+   ],
    "source": [
-    "# prediction error rate"
+    "# prediction error rate\n",
+    "#print(f\"prediction error rate: {(1 - knn.score(X_test, Y_test)) * 100} %\")\n",
+    "print(f\"prediction error rate: {np.mean(Y_test != knn.predict(X_test)) * 100} %\")\n",
+    "# confusion_table(knn_pred, testing_Y)"
    ]
   },
   {
@@ -237,15 +401,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "c89ade30-3465-4104-b300-61d78b319d3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.357325538911216\n",
+      "\n",
+      "      A random prediction would give, on average, a 50% accuracy/error rate. The model above is significantly more accurate.\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate the percentage of customers who purchase insurance\n",
-    "percentage_purchase = (Caravan['Purchase'].eq('Yes').sum() / Caravan['Purchase'].eq('No').sum()) * 100\n",
+    "percentage_purchase = (\n",
+    "    Caravan[\"Purchase\"].eq(\"Yes\").sum() / Caravan[\"Purchase\"].eq(\"No\").sum()\n",
+    ") * 100\n",
     "\n",
-    "print(percentage_purchase)"
+    "print(percentage_purchase)\n",
+    "print(\n",
+    "    \"\"\"\n",
+    "      A random prediction would give, on average, a 50% accuracy/error rate. The model above is significantly more accurate.\n",
+    "    \"\"\"\n",
+    ")"
    ]
   },
   {
@@ -258,12 +440,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "fedbe4f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model with a K (nearest neighbors) of 3 has an accuracy score of 93.95604395604396 %. This is higher than our first model by nearly 2%, and is significantly better than a random guess.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Add your code here\n",
+    "knn2 = KNeighborsClassifier(n_neighbors=3)\n",
+    "knn2.fit(X_test, Y_test)\n",
+    "knn_pred2 = knn.predict(X_test)\n",
+    "knn2_score = knn2.score(X_test, Y_test)\n",
+    "\n",
+    "print(f\"model with a K (nearest neighbors) of 3 has an accuracy score of {knn2_score * 100} %. This is higher than our first model by nearly 2%, and is significantly better than a random guess.\")"
    ]
   },
   {
@@ -321,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   },
   "vscode": {
    "interpreter": {
